--- a/config/database.yml
+++ b/config/database.yml
@@ -5,9 +5,11 @@
 #   gem 'sqlite3'
 #
 default: &default
-  adapter: sqlite3
-  pool: 5
-  timeout: 5000
+  adapter: mysql2
+  username: root
+  password: root
+  host: db
+  port: 3306
 
 development:
   <<: *default
